--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
             selectedCards.forEach(card => {
                 let img = document.createElement('img');
-                img.src = `https://HourLight.github.io/11/11/${card}.jpg`;
+                img.src = `https://github.com/HourLight/11/raw/main/LINE_ALBUM_2025.3.23_250323_${card}.jpg`;
                 resultDiv.appendChild(img);
             });
         }
