--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </style>
 </head>
 <body>
-    <h1>馥靈之鑰Hour Light｜芳香能量調頻線上抽牌</h1>
+    <h1>馥靈之鑰 Hour Light｜芳香能量調頻線上抽牌</h1>
     <div>
         <button onclick="drawCards(1)">抽 1 張</button>
         <button onclick="drawCards(3)">抽 3 張</button>
@@ -54,7 +54,7 @@
     <script>
         function drawCards(num) {
 
-            alert("✨請先閉上眼睛，深呼吸三次，默念你心中的問題，準備好後再點擊確認✨");
+            alert("請閉上眼睛，深呼吸，專心想著您的問題，再點擊確認");
 
             let totalCards = 130;
             let selectedCards = [];
