--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>馥靈之鑰 Hour Light｜芳香能量調頻線上抽牌</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <style>
         body {
             background-color: #f8f5f0;
