--- a/index.html
+++ b/index.html
@@ -4,16 +4,19 @@
     <meta charset="UTF-8">
     <title>馥靈之鑰 Hour Light｜芳香能量調頻線上抽牌</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <!-- 字型與高級設計樣式 -->
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
-            background-color: #f8f5f0;
-            font-family: 'Arial', sans-serif;
-            color: #333;
+            background: linear-gradient(135deg, #f8f0e5, #e4d2c5);
+            font-family: 'Noto Serif TC', serif;
+            color: #6b4f3e;
             text-align: center;
-            padding: 20px;
+            padding: 30px;
         }
         h1 {
-            color: #6b4f3e;
+            font-weight: 700;
+            font-size: 36px;
         }
         button {
             background-color: #a28572;
@@ -22,23 +25,31 @@
             padding: 10px 20px;
             cursor: pointer;
             font-size: 18px;
-            margin: 5px;
-            border-radius: 10px;
+            margin: 8px;
+            border-radius: 12px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+            transition: transform 0.2s;
+        }
+        button:hover {
+            transform: scale(1.05);
         }
         img {
             max-width: 220px;
-            height: auto;
-            margin: 10px;
+            margin: 12px;
             border-radius: 15px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.3);
+            box-shadow: 0 4px 10px rgba(0,0,0,0.3);
         }
-        #result {
-            margin-top: 20px;
+        p {
+            font-size: 16px;
+            color: #4a3b31;
+            line-height: 1.6;
+            margin-bottom: 20px;
         }
     </style>
 </head>
 <body>
     <h1>馥靈之鑰 Hour Light｜芳香能量調頻線上抽牌</h1>
+
     <div>
         <button onclick="drawCards(1)">抽 1 張</button>
         <button onclick="drawCards(3)">抽 3 張</button>
@@ -52,9 +63,23 @@
 
     <div id="result"></div>
 
-    <script>
-        function drawCards(num) {
+    <div>
+        <button onclick="shareToFB()">分享到 Facebook</button>
+        <button onclick="shareToLINE()">分享到 LINE</button>
+    </div>
 
+    <script>
+        // 牌卡解析內容（你可以持續補齊至130張牌）
+        const cardDescriptions = {
+          1: "這張牌提醒你，放慢腳步才能看清楚眼前的路，適時休息與放鬆，才有力量繼續前行。",
+          2: "這張牌提醒你，要相信自己的直覺，答案已經在你內心深處。",
+          3: "你擁有獨特的魅力，不需強求就能吸引美好的事物到來。",
+          4: "學會等待時機成熟，耐心與智慧是你此刻的最佳伴侶。",
+          5: "放下過去的包袱，允許新的機會與能量進入你的生命。",
+          // 更多牌卡內容可逐步新增...
+        };
+
+        function drawCards(num) {
             alert("請閉上眼睛，深呼吸，專心想著您的問題，再點擊確認");
 
             let totalCards = 130;
@@ -73,7 +98,22 @@
                 let img = document.createElement('img');
                 img.src = `https://github.com/HourLight/11/raw/main/LINE_ALBUM_2025.3.23_250323_${card}.jpg`;
                 resultDiv.appendChild(img);
+
+                let description = document.createElement('p');
+                description.innerText = cardDescriptions[card] || "牌卡內容建置中，敬請期待…";
+                resultDiv.appendChild(description);
             });
+        }
+
+        // 社群分享功能
+        function shareToFB() {
+          let url = encodeURIComponent(location.href);
+          window.open(`https://www.facebook.com/sharer/sharer.php?u=${url}`, '_blank');
+        }
+
+        function shareToLINE() {
+          let url = encodeURIComponent(location.href);
+          window.open(`https://social-plugins.line.me/lineit/share?url=${url}`, '_blank');
         }
     </script>
 </body>
