--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <style>
         body {
-            background-color: #f8f5f0;
+            background: url('https://i.imgur.com/dDYiUJU.jpg') center/cover fixed;
             font-family: 'Arial', sans-serif;
             color: #333;
             text-align: center;
@@ -14,16 +14,25 @@
         }
         h1 {
             color: #6b4f3e;
+            background-color: rgba(255,255,255,0.7);
+            display: inline-block;
+            padding: 10px 20px;
+            border-radius: 10px;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.3);
         }
         button {
             background-color: #a28572;
             color: white;
             border: none;
-            padding: 10px 20px;
+            padding: 12px 24px;
             cursor: pointer;
-            font-size: 18px;
+            font-size: 20px;
             margin: 5px;
-            border-radius: 10px;
+            border-radius: 12px;
+            box-shadow: 0 2px 6px rgba(0,0,0,0.3);
+        }
+        button:hover {
+            background-color: #8b6c5b;
         }
         img {
             width: 90%;
@@ -31,22 +40,31 @@
             height: auto;
             margin: 10px auto;
             border-radius: 15px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.3);
+            box-shadow: 0 0 10px rgba(0,0,0,0.4);
             display: block;
         }
         .card-number {
-            font-size: 22px;
+            font-size: 24px;
             font-weight: bold;
-            color: #a28572;
+            color: #6b4f3e;
             margin-top: -10px;
             margin-bottom: 20px;
+            background-color: rgba(255,255,255,0.8);
+            border-radius: 8px;
+            display: inline-block;
+            padding: 5px 10px;
         }
         #result {
             margin-top: 20px;
         }
         #copyBtn {
-            background-color: #6b4f3e;
-            margin-top: 20px;
+            background-color: #d4af37; /* 金色按鈕 */
+            font-size: 22px; /* 更大的字體 */
+            padding: 15px 30px;
+            margin-top: 25px;
+        }
+        #copyBtn:hover {
+            background-color: #b4902a; /* 深金色 */
         }
     </style>
 </head>
@@ -64,7 +82,7 @@
     </div>
 
     <div id="result"></div>
-    <button id="copyBtn" onclick="copyNumbers()" style="display:none;">複製抽到的牌號</button>
+    <button id="copyBtn" onclick="copyNumbers()" style="display:none;">📋 複製抽到的牌號</button>
 
     <script>
         let selectedCards = [];
