--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <style>
         body {
-            background: url('https://i.imgur.com/dDYiUJU.jpg') center/cover fixed;
+            background: url('https://images.unsplash.com/photo-1602979765361-0c2c7dc48024?ixlib=rb-1.2.1&auto=format&fit=crop&w=1920&q=80') center/cover fixed;
             font-family: 'Arial', sans-serif;
             color: #333;
             text-align: center;
