--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <style>
         body {
-            background: url('https://i.imgur.com/ZhRLleA.jpg') center/cover fixed;
+            background: url('https://github.com/HourLight/11/raw/main/background.jpg') center/cover fixed;
             font-family: 'Arial', sans-serif;
             color: #333;
             text-align: center;
@@ -88,7 +88,7 @@
         let selectedCards = [];
 
         function drawCards(num) {
-            alert("請閉上眼睛，深呼吸，專心想著您的問題，在點擊確認");
+            alert("請閉上眼睛，深呼吸，專心想著您的問題，再點擊確認");
 
             let totalCards = 130;
             selectedCards = [];
