--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <style>
         body {
-            background: url('https://i.imgur.com/8wE4PpJ.png') no-repeat center center fixed;
-            background-size: cover;
+ background: url('https://github.com/HourLight/11/raw/main/background.jpg') center/cover fixed;
+            font-family: 'Arial', sans-serif;
             font-family: 'Arial', sans-serif;
             color: #333;
             text-align: center;
@@ -79,7 +79,6 @@
         <button onclick="drawCards(5)">抽 5 張</button>
         <button onclick="drawCards(7)">抽 7 張</button>
         <button onclick="drawCards(9)">抽 9 張</button>
-        <button onclick="drawCards(10)">抽 10 張</button>
         <button onclick="drawCards(12)">抽 12 張</button>
         <button onclick="drawCards(15)">抽 15 張</button>
     </div>
