--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <style>
         body {
- background: url('https://github.com/HourLight/11/raw/main/background.jpg') center/cover fixed;
-            font-family: 'Arial', sans-serif;
+            background: url('https://github.com/HourLight/11/raw/main/background.jpg') no-repeat center center fixed;
+            background-size: cover;
             font-family: 'Arial', sans-serif;
             color: #333;
             text-align: center;
             padding: 20px;
+            margin: 0;
         }
         h1 {
             color: #6b4f3e;
@@ -51,7 +52,6 @@
             background-color: #cda86e;
         }
 
-        /* 手機螢幕進一步優化 */
         @media (max-width: 768px) {
             button {
                 width: 80%;
@@ -79,12 +79,13 @@
         <button onclick="drawCards(5)">抽 5 張</button>
         <button onclick="drawCards(7)">抽 7 張</button>
         <button onclick="drawCards(9)">抽 9 張</button>
+        <button onclick="drawCards(10)">抽 10 張</button>
         <button onclick="drawCards(12)">抽 12 張</button>
         <button onclick="drawCards(15)">抽 15 張</button>
     </div>
 
     <div id="result"></div>
-    <button id="copyBtn" onclick="copyResult()">複製抽牌編號</button>
+    <button id="copyBtn" onclick="copyResult()">📋 複製抽牌編號</button>
 
     <script>
         let selectedCards = [];
