--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
             color: #6b4f3e;
             font-size: 32px;
             text-shadow: 0 1px 3px rgba(255,255,255,0.8);
+            background-color: rgba(255,255,255,0.8); /* 半透明白底 */
+            display: inline-block;
+            padding: 10px 20px;
+            border-radius: 15px; /* 圓角增加高級感 */
+            box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+            margin-bottom: 15px;
         }
         button {
             background-color: #a28572;
