--- a/index.html
+++ b/index.html
@@ -40,10 +40,14 @@
             background-color: #6b4f3e;
             transform: translateY(-2px);
         }
-        img {
-            max-width: 220px;
+        .card-container {
+            display: inline-block;
+            margin: 15px;
+            text-align: center;
+        }
+        .card-container img {
+            width: 220px;
             height: auto;
-            margin: 10px;
             border-radius: 15px;
             box-shadow: 0 0 10px rgba(0,0,0,0.3);
         }
@@ -53,8 +57,8 @@
             color: #6b4f3e;
             background-color: rgba(255,255,255,0.7);
             border-radius: 8px;
-            padding: 4px 10px;
-            margin: 5px auto 15px auto;
+            padding: 5px 10px;
+            margin-top: 8px;
             display: inline-block;
         }
         #result {
@@ -66,6 +70,7 @@
             margin-top: 20px;
             background-color: #cda86e;
         }
+
         @media (max-width: 768px) {
             button {
                 width: 80%;
@@ -82,6 +87,9 @@
                 font-size: 24px;
                 padding: 15px 0;
             }
+            .card-container img {
+                width: 90%;
+            }
         }
     </style>
 </head>
@@ -93,6 +101,7 @@
         <button onclick="drawCards(5)">抽 5 張</button>
         <button onclick="drawCards(7)">抽 7 張</button>
         <button onclick="drawCards(9)">抽 9 張</button>
+        <button onclick="drawCards(10)">抽 10 張</button>
         <button onclick="drawCards(12)">抽 12 張</button>
         <button onclick="drawCards(15)">抽 15 張</button>
     </div>
@@ -102,14 +111,6 @@
 
     <script>
         let selectedCards = [];
-
-        function formatCardNumber(card) {
-            if (card <= 22) {
-                return String(card - 1).padStart(2, '0'); // 00-21
-            } else {
-                return String(card - 22).padStart(3, '0'); // 001-108
-            }
-        }
 
         function drawCards(num) {
             alert("請閉上眼睛，深呼吸，專心想著您的問題，再點擊確認");
@@ -127,16 +128,21 @@
             resultDiv.innerHTML = '';
 
             selectedCards.forEach(card => {
-                let formattedCardNum = formatCardNumber(card);
-                
+                let formattedCardNum = String(card).padStart(3, '0');
+
+                let cardContainer = document.createElement('div');
+                cardContainer.className = 'card-container';
+
                 let img = document.createElement('img');
                 img.src = `https://github.com/HourLight/11/raw/main/LINE_ALBUM_2025.3.23_250323_${card}.jpg`;
-                resultDiv.appendChild(img);
+                cardContainer.appendChild(img);
 
                 let cardNumberDiv = document.createElement('div');
                 cardNumberDiv.className = 'card-number';
                 cardNumberDiv.textContent = `牌卡編號：${formattedCardNum}`;
-                resultDiv.appendChild(cardNumberDiv);
+                cardContainer.appendChild(cardNumberDiv);
+
+                resultDiv.appendChild(cardContainer);
             });
         }
 
@@ -145,7 +151,7 @@
                 alert("請先抽牌後再複製！");
                 return;
             }
-            let formattedNumbers = selectedCards.map(card => formatCardNumber(card));
+            let formattedNumbers = selectedCards.map(card => String(card).padStart(3, '0'));
             navigator.clipboard.writeText(formattedNumbers.join(', '))
                 .then(() => alert('抽牌編號已複製！'))
                 .catch(err => alert('複製失敗，請手動複製：' + formattedNumbers.join(', ')));
