--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             display: inline-block;
             padding: 10px 20px;
             border-radius: 15px;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.2);
             margin-bottom: 15px;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.2);
         }
         button {
             background-color: #a28572;
@@ -34,7 +34,7 @@
             margin: 8px;
             border-radius: 15px;
             box-shadow: 0 2px 8px rgba(0,0,0,0.2);
-            transition: background-color 0.3s, transform 0.3s;
+            transition: 0.3s;
         }
         button:hover {
             background-color: #6b4f3e;
@@ -44,25 +44,24 @@
             display: inline-block;
             margin: 15px;
             text-align: center;
+            vertical-align: top;
         }
         .card-container img {
+            display: block;
             width: 220px;
             height: auto;
             border-radius: 15px;
+            margin: 0 auto;
             box-shadow: 0 0 10px rgba(0,0,0,0.3);
         }
         .card-number {
+            margin-top: 10px;
             font-size: 22px;
             font-weight: bold;
-            color: #6b4f3e;
             background-color: rgba(255,255,255,0.7);
-            border-radius: 8px;
             padding: 5px 10px;
-            margin-top: 8px;
+            border-radius: 8px;
             display: inline-block;
-        }
-        #result {
-            margin-top: 20px;
         }
         #copyBtn {
             font-size: 22px;
@@ -70,22 +69,13 @@
             margin-top: 20px;
             background-color: #cda86e;
         }
-
         @media (max-width: 768px) {
-            button {
+            button, #copyBtn {
                 width: 80%;
                 display: block;
                 margin: 12px auto;
                 padding: 18px 0;
                 font-size: 24px;
-            }
-            h1 {
-                font-size: 28px;
-            }
-            #copyBtn {
-                width: 80%;
-                font-size: 24px;
-                padding: 15px 0;
             }
             .card-container img {
                 width: 90%;
@@ -101,13 +91,12 @@
         <button onclick="drawCards(5)">抽 5 張</button>
         <button onclick="drawCards(7)">抽 7 張</button>
         <button onclick="drawCards(9)">抽 9 張</button>
-        <button onclick="drawCards(10)">抽 10 張</button>
         <button onclick="drawCards(12)">抽 12 張</button>
         <button onclick="drawCards(15)">抽 15 張</button>
     </div>
 
     <div id="result"></div>
-    <button id="copyBtn" onclick="copyResult()">📋 複製抽牌編號</button>
+    <button id="copyBtn" onclick="copyResult()">📋 複製牌卡編號</button>
 
     <script>
         let selectedCards = [];
@@ -115,8 +104,8 @@
         function drawCards(num) {
             alert("請閉上眼睛，深呼吸，專心想著您的問題，再點擊確認");
 
-            let totalCards = 130;
             selectedCards = [];
+            let totalCards = 130;
             while (selectedCards.length < num) {
                 let cardNum = Math.floor(Math.random() * totalCards) + 1;
                 if (!selectedCards.includes(cardNum)) {
@@ -128,7 +117,7 @@
             resultDiv.innerHTML = '';
 
             selectedCards.forEach(card => {
-                let formattedCardNum = String(card).padStart(3, '0');
+                let formattedCardNum = card.toString().padStart(3, '0');
 
                 let cardContainer = document.createElement('div');
                 cardContainer.className = 'card-container';
@@ -139,7 +128,7 @@
 
                 let cardNumberDiv = document.createElement('div');
                 cardNumberDiv.className = 'card-number';
-                cardNumberDiv.textContent = `牌卡編號：${formattedCardNum}`;
+                cardNumberDiv.textContent = `編號：${formattedCardNum}`;
                 cardContainer.appendChild(cardNumberDiv);
 
                 resultDiv.appendChild(cardContainer);
@@ -151,10 +140,10 @@
                 alert("請先抽牌後再複製！");
                 return;
             }
-            let formattedNumbers = selectedCards.map(card => String(card).padStart(3, '0'));
+            let formattedNumbers = selectedCards.map(card => card.toString().padStart(3, '0'));
             navigator.clipboard.writeText(formattedNumbers.join(', '))
                 .then(() => alert('抽牌編號已複製！'))
-                .catch(err => alert('複製失敗，請手動複製：' + formattedNumbers.join(', ')));
+                .catch(() => alert('複製失敗，請手動複製：' + formattedNumbers.join(', ')));
         }
     </script>
 </body>
