nail-energy.html

--- a/nail-energy.html
+++ b/nail-energy.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>馥靈之鑰｜美甲專屬能量卡抽牌＋頻測報告</title>
+<link rel="icon" type="image/x-icon" href="favicon.ico">
     <style>
         body {
             background: url('https://github.com/HourLight/11/raw/main/background.jpg') no-repeat center center fixed;
