--- a/index.html
+++ b/index.html
@@ -47,11 +47,8 @@
             vertical-align: top;
         }
         .card-container img {
-            display: block;
             width: 220px;
-            height: auto;
             border-radius: 15px;
-            margin: 0 auto;
             box-shadow: 0 0 10px rgba(0,0,0,0.3);
         }
         .card-number {
@@ -61,7 +58,6 @@
             background-color: rgba(255,255,255,0.7);
             padding: 5px 10px;
             border-radius: 8px;
-            display: inline-block;
         }
         #copyBtn {
             font-size: 22px;
@@ -78,7 +74,6 @@
             border-radius: 8px;
             box-shadow: 0 3px 6px rgba(0,0,0,0.2);
             transition: 0.3s;
-            font-family: Arial, sans-serif;
             margin: 25px auto;
         }
         .home-button:hover {
@@ -88,7 +83,6 @@
         @media (max-width: 768px) {
             button, #copyBtn {
                 width: 80%;
-                display: block;
                 margin: 12px auto;
                 padding: 18px 0;
                 font-size: 24px;
@@ -113,9 +107,12 @@
 
     <div id="result"></div>
     <button id="copyBtn" onclick="copyResult()">📋 複製牌卡編號</button>
-<div style="text-align:center; margin-top:20px;">
-    <a class="home-button" href="https://chatgpt.com/g/g-67de9df8ee9c8191a6fff09a77f24fa0-fu-ling-zhi-yao-jie-pai" target="_blank">🔮 前往馥靈之鑰解牌頁面</a>
-</div>
+
+    <div style="text-align:center; margin-top:20px;">
+        <button class="home-button" onclick="copyURL()">🔮 複製解牌連結</button>
+        <p style="color:#6b4f3e; margin-top:10px;">⚠️ 由於連結限制，請複製連結後自行開啟。</p>
+    </div>
+
     <div style="text-align:center;">
         <a class="home-button" href="index.html">🏠 返回首頁</a>
     </div>
@@ -124,43 +121,27 @@
         let selectedCards = [];
 
         function formatCardNumber(card) {
-            if (card <= 22) {
-                return 'A' + (card - 1).toString().padStart(2, '0');
-            } else {
-                return (card - 22).toString().padStart(3, '0');
-            }
+            return card <= 22 ? 'A' + (card - 1).toString().padStart(2, '0') : (card - 22).toString().padStart(3, '0');
         }
 
         function drawCards(num) {
             alert("請閉上眼睛，深呼吸，專心想著您的問題，再點擊確認");
-
             selectedCards = [];
             let totalCards = 130;
             while (selectedCards.length < num) {
                 let cardNum = Math.floor(Math.random() * totalCards) + 1;
-                if (!selectedCards.includes(cardNum)) {
-                    selectedCards.push(cardNum);
-                }
+                if (!selectedCards.includes(cardNum)) selectedCards.push(cardNum);
             }
-
             let resultDiv = document.getElementById('result');
             resultDiv.innerHTML = '';
-
             selectedCards.forEach(card => {
                 let formattedCardNum = formatCardNumber(card);
-
                 let cardContainer = document.createElement('div');
                 cardContainer.className = 'card-container';
-
-                let img = document.createElement('img');
-                img.src = `https://github.com/HourLight/11/raw/main/LINE_ALBUM_2025.3.23_250323_${card}.jpg`;
-                cardContainer.appendChild(img);
-
-                let cardNumberDiv = document.createElement('div');
-                cardNumberDiv.className = 'card-number';
-                cardNumberDiv.textContent = `編號：${formattedCardNum}`;
-                cardContainer.appendChild(cardNumberDiv);
-
+                cardContainer.innerHTML = `
+                    <img src="https://github.com/HourLight/11/raw/main/LINE_ALBUM_2025.3.23_250323_${card}.jpg">
+                    <div class="card-number">編號：${formattedCardNum}</div>
+                `;
                 resultDiv.appendChild(cardContainer);
             });
         }
@@ -170,10 +151,17 @@
                 alert("請先抽牌後再複製！");
                 return;
             }
-            let formattedNumbers = selectedCards.map(card => formatCardNumber(card));
-            navigator.clipboard.writeText(formattedNumbers.join(', '))
+            let formattedNumbers = selectedCards.map(formatCardNumber).join(', ');
+            navigator.clipboard.writeText(formattedNumbers)
                 .then(() => alert('抽牌編號已複製！'))
-                .catch(() => alert('複製失敗，請手動複製：' + formattedNumbers.join(', ')));
+                .catch(() => alert('複製失敗，請手動複製：' + formattedNumbers));
+        }
+
+        function copyURL() {
+            const url = "https://chatgpt.com/g/g-67de9df8ee9c8191a6fff09a77f24fa0-fu-ling-zhi-yao-jie-pai";
+            navigator.clipboard.writeText(url)
+                .then(() => alert("解牌連結已複製，請自行在新頁籤貼上開啟！"))
+                .catch(() => alert("複製失敗，請手動複製：" + url));
         }
     </script>
 </body>
