--- a/index.html
+++ b/index.html
@@ -110,7 +110,10 @@
 
     <div style="text-align:center; margin-top:20px;">
         <button class="home-button" onclick="copyURL()">🔮 複製解牌連結</button>
-        <p style="color:#6b4f3e; margin-top:10px;">⚠️ 由於連結限制，請複製連結後自行開啟。</p>
+        <p style="color:#6b4f3e; margin-top:10px; background-color: rgba(255,255,255,0.8); display:inline-block; padding:8px 12px; border-radius:8px;">
+⚠️ 由於連結限制，請複製連結後自行開啟。
+</p>
+
     </div>
 
     <div style="text-align:center;">
