--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     </div>
 
     <div style="text-align:center;">
-        <a class="home-button" href="index.html">🏠 返回首頁</a>
+       <a class="home-button" href="https://hourlight.github.io/">🏠 返回首頁</a>
     </div>
 
     <script>
