nail-energy.html

--- a/nail-energy.html
+++ b/nail-energy.html
@@ -111,6 +111,9 @@
                 alert('無法自動複製，請手動複製：' + cardNumber);
             });
         }
+    <div style="text-align:center; margin-top:25px;">
+    <a class="link-button" href="https://hourlight.github.io/">🏠 返回首頁</a>
+</div>
     </script>
 </body>
 </html>
