--- a/spa-energy.html
+++ b/spa-energy.html
@@ -116,6 +116,9 @@
                 alert('無法自動複製，請手動複製：' + numbers);
             });
         }
+    <div style="text-align:center; margin-top:25px;">
+    <a class="link-button" href="https://hourlight.github.io/">🏠 返回首頁</a>
+</div>
     </script>
 </body>
 </html>
