spa-energy.html

--- a/spa-energy.html
+++ b/spa-energy.html
@@ -116,9 +116,12 @@
                 alert('無法自動複製，請手動複製：' + numbers);
             });
         }
-    <div style="text-align:center; margin-top:25px;">
-    <a class="link-button" href="https://hourlight.github.io/">🏠 返回首頁</a>
-</div>
     </script>
+
+    <!-- 返回首頁按鈕（已調整位置） -->
+    <div style="text-align:center; margin-top:25px;">
+        <a class="link-button" href="https://hourlight.github.io/">🏠 返回首頁</a>
+    </div>
+
 </body>
 </html>
