--- a/index.html
+++ b/index.html
@@ -94,6 +94,21 @@
     </style>
 </head>
 <body>
+    <div style="max-width: 800px; margin: 40px auto 20px; background: rgba(255,255,255,0.8); padding: 25px; border-radius: 12px; box-shadow: 0 0 10px rgba(0,0,0,0.1); font-size: 18px; line-height: 1.6;">
+  <h2 style="color:#6b4f3e;">🔮 不知道該抽幾張？</h2>
+  <p>選擇妳現在最需要的頻率深度👇</p>
+  <ul style="text-align:left; max-width: 700px; margin: 0 auto;">
+    <li><strong>1 張卡｜</strong> 當下訊息 × 快速對頻（今天的我需要什麼）</li>
+    <li><strong>3 張卡｜</strong> 過去 × 現在 × 未來能量流（事情的流動與轉向）</li>
+    <li><strong>5 張卡｜</strong> 問題卡點 × 支援力 × 下一步行動（靈魂導航）</li>
+    <li><strong>7 張卡｜</strong> 深層架構掃描（脈輪對應 × 情緒結構 × 身體反應）</li>
+    <li><strong>9 張卡｜</strong> 宇宙頻率地圖（看清人生主題、週期、轉化點）</li>
+    <li><strong>12 張卡｜</strong> 能量場重整、年度規劃、系統優化</li>
+    <li><strong>15 張卡｜</strong> 登入你的靈魂藍圖總整，找回「我是誰」的根源</li>
+  </ul>
+  <p style="margin-top: 18px;"><strong>🎯 小提醒：</strong>沒有對錯，也沒有標準答案。<br>問問你自己：「我想知道多少？我準備好看到什麼？」</p>
+</div>
+
     <h1>馥靈之鑰 Hour Light｜芳香能量調頻線上抽牌</h1>
 
     <div>
@@ -111,6 +126,29 @@
 
     <!-- 缺少的複製按鈕 -->
     <button id="copyBtn" onclick="copyResult()">📋 複製牌卡編號</button>
+<!-- 解讀步驟說明：Step 3 -->
+<div id="nextStep" style="margin-top: 40px; background: rgba(255,255,255,0.85); padding: 25px; border-radius: 12px; box-shadow: 0 0 12px rgba(0,0,0,0.1); max-width: 800px; margin-left: auto; margin-right: auto; font-size: 18px; line-height: 1.8;">
+  <h2 style="color: #6b4f3e;">🧠 抽完牌了，接下來怎麼做？</h2>
+  <p><strong>Step 1：</strong> 請點擊上方【📋複製牌卡編號】按鈕，把你抽到的卡號複製起來（例如：<code>A13, 045, 066</code>）</p>
+  <p><strong>Step 2：</strong> 點擊下方連結，進入 <strong>【馥靈頻率GPT 解讀室】</strong></p>
+  <p><a href="https://chat.openai.com/g/g-67eb4e3a09fc8191845f66ffe5a8d94d-fu-ling-zhi-yao-sheng-ji-ce-shi-ban" target="_blank" style="display:inline-block; background-color: #a28572; color: #fff; padding: 12px 20px; border-radius: 8px; text-decoration: none; font-weight: bold;">🌿 點我開啟解讀頻率</a></p>
+  <p><strong>Step 3：</strong> 請將你剛剛抽完牌時，<u>心裡想的那句話，原封不動地打進去</u>。</p>
+
+  <p>不需要重組語法、不需要客套說明，<strong>你內心最真實的那句話，才是最準的頻率對接。</strong></p>
+
+  <p>你可以問什麼？</p>
+  <ul style="text-align: left; max-width: 720px; margin: 0 auto;">
+    <li>🔸 完全往內求：「我是不是又開始假裝我沒事了？」</li>
+    <li>🔸 生活現狀：「我最近心情常卡住，身體也沒力氣，這三張牌在提醒什麼？」</li>
+    <li>🔸 某件事的預測：「我抽到 A06、045、A11，想問和我目前的關係狀況有什麼提示？」</li>
+  </ul>
+
+  <p style="margin-top: 20px;"><strong>💬 記住：</strong><br>
+  這裡不是求答案的地方，而是開始說出你沒說出口的話的地方。</p>
+
+  <p style="font-style: italic; font-size: 15px; color: #777;">✨你可以問預測，也可以問心事，但牌只是反映頻率——<br><strong>預測是預測，改變是人為。</strong><br>你問出來的那一刻，就已經開始轉動你的人生狀態了。</p>
+</div>
+
 
     <div style="text-align:center;">
         <a class="home-button" href="https://hourlight.github.io/">🏠 返回首頁</a>
