--- a/index.html
+++ b/index.html
@@ -148,6 +148,12 @@
 
   <p style="font-style: italic; font-size: 15px; color: #777;">✨你可以問預測，也可以問心事，但牌只是反映頻率——<br><strong>預測是預測，改變是人為。</strong><br>你問出來的那一刻，就已經開始轉動你的人生狀態了。</p>
 </div>
+<hr style="margin: 30px 0;">
+<h3 style="color: #6b4f3e;">🌿 想把頻率真的用起來？</h3>
+<p>如果你想讓這次抽牌變成真正的能量轉化體驗，</p>
+<p>我可以幫你設計專屬的滾珠香氣、能量美甲、或頻率療程。</p>
+<p>👉 <strong>點這裡直接預約《HOUR LIGHT 頻率療癒》</strong>：</p>
+<a href="https://lin.ee/ySxUkJK" target="_blank" style="display:inline-block; background-color: #a28572; color: #fff; padding: 12px 25px; border-radius: 10px; text-decoration: none; font-size: 20px; font-weight: bold; box-shadow: 0 3px 8px rgba(0,0,0,0.15); margin-top: 10px;">🧘‍♀️ 我要預約能量療程</a>
 
 
     <div style="text-align:center;">
