--- a/nail-energy.html
+++ b/nail-energy.html
@@ -1,121 +1,139 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
-    <meta charset="UTF-8">
-    <title>馥靈之鑰｜美甲專屬能量卡抽牌＋頻測報告</title>
-<link rel="icon" type="image/x-icon" href="favicon.ico">
-    <style>
-        body {
-            background: url('https://github.com/HourLight/11/raw/main/background.jpg') no-repeat center center fixed;
-            background-size: cover;
-            font-family: 'Arial', sans-serif;
-            color: #333;
-            text-align: center;
-            margin: 0;
-            padding: 20px;
-        }
-        h1 {
-            font-size: 30px;
-            background-color: rgba(255,255,255,0.8);
-            color: #6b4f3e;
-            padding: 15px 25px;
-            border-radius: 15px;
-            box-shadow: 0 3px 8px rgba(0,0,0,0.2);
-            display: inline-block;
-            margin-bottom: 20px;
-        }
-        button, .link-button {
-            background-color: #cda86e;
-            color: white;
-            border: none;
-            padding: 12px 20px;
-            cursor: pointer;
-            font-size: 22px;
-            border-radius: 15px;
-            margin-top: 15px;
-            box-shadow: 0 2px 6px rgba(0,0,0,0.2);
-            transition: 0.3s;
-            text-decoration: none;
-            display: inline-block;
-        }
-        button:hover, .link-button:hover {
-            background-color: #a28572;
-            transform: translateY(-2px);
-        }
-        img {
-            max-width: 280px;
-            height: auto;
-            border-radius: 15px;
-            box-shadow: 0 3px 10px rgba(0,0,0,0.3);
-            margin-top: 20px;
-        }
-        .card-name {
-            font-size: 24px;
-            font-weight: bold;
-            margin-top: 15px;
-            color: #6b4f3e;
-            background-color: rgba(255,255,255,0.8);
-            padding: 5px 15px;
-            border-radius: 10px;
-            display: inline-block;
-        }
-        @media (max-width: 768px) {
-            img {
-                width: 90%;
-            }
-            button, .link-button {
-                width: 80%;
-                padding: 15px 0;
-            }
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <title>馥靈之鑰｜美甲專屬能量卡抽牌＋頻測報告</title>
+  <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  <style>
+    body {
+      background: url('https://github.com/HourLight/11/raw/main/background.jpg') no-repeat center center fixed;
+      background-size: cover;
+      font-family: 'Arial', sans-serif;
+      color: #333;
+      text-align: center;
+      margin: 0;
+      padding: 20px;
+    }
+    h1 {
+      font-size: 30px;
+      background-color: rgba(255, 255, 255, 0.8);
+      color: #6b4f3e;
+      padding: 15px 25px;
+      border-radius: 15px;
+      box-shadow: 0 3px 8px rgba(0, 0, 0, 0.2);
+      display: inline-block;
+      margin-bottom: 20px;
+    }
+    button, .link-button {
+      background-color: #cda86e;
+      color: white;
+      border: none;
+      padding: 12px 20px;
+      cursor: pointer;
+      font-size: 22px;
+      border-radius: 15px;
+      margin-top: 15px;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+      transition: 0.3s;
+      text-decoration: none;
+      display: inline-block;
+    }
+    button:hover, .link-button:hover {
+      background-color: #a28572;
+      transform: translateY(-2px);
+    }
+    img {
+      max-width: 280px;
+      height: auto;
+      border-radius: 15px;
+      box-shadow: 0 3px 10px rgba(0, 0, 0, 0.3);
+      margin-top: 20px;
+    }
+    .card-name {
+      font-size: 24px;
+      font-weight: bold;
+      margin-top: 15px;
+      color: #6b4f3e;
+      background-color: rgba(255, 255, 255, 0.8);
+      padding: 5px 15px;
+      border-radius: 10px;
+      display: inline-block;
+    }
+    @media (max-width: 768px) {
+      img {
+        width: 90%;
+      }
+      button, .link-button {
+        width: 80%;
+        padding: 15px 0;
+      }
+    }
+  </style>
 </head>
 <body>
-    <h1>💅 馥靈之鑰｜美甲專屬能量卡 💅</h1>
-    <div id="cardArea">
-        <button onclick="drawCard()">點我抽取專屬能量卡</button>
-    </div>
+  <h1>💅 馥靈之鑰｜美甲專屬能量卡 💅</h1>
+  <div id="cardArea">
+    <label for="cardCount" style="font-size: 20px; font-weight: bold; color: #fff; background: rgba(0,0,0,0.4); padding: 10px; border-radius: 10px;">
+      選擇你要抽幾張牌：
+    </label><br>
+    <select id="cardCount" style="font-size: 18px; padding: 8px 12px; border-radius: 8px; margin-top: 10px;">
+      <option value="1">1 張牌｜快速對頻</option>
+      <option value="3">3 張牌｜過去・現在・未來</option>
+      <option value="5">5 張牌｜靈魂導航</option>
+    </select><br><br>
+    <button onclick="drawCards()">點我抽牌</button>
+  </div>
 
-    <script>
-        function formatCardNumber(card) {
-            return card <= 22 ? 'A' + (card - 1).toString().padStart(2, '0') : (card - 22).toString().padStart(3, '0');
-        }
+  <script>
+    function formatCardNumber(card) {
+      return card <= 22 ? 'A' + (card - 1).toString().padStart(2, '0') : (card - 22).toString().padStart(3, '0');
+    }
 
-        function drawCard() {
-            alert("深呼吸，心中默默詢問:請「馥靈之鑰」幫我調頻，確認我現在最需要的能量。然後點擊確認");
+    function drawCards() {
+      alert("請深呼吸，默念你現在的感受與需要。然後點選確認，抽出你的靈魂頻率。");
 
-            let totalCards = 130;
-            let card = Math.floor(Math.random() * totalCards) + 1;
+      let count = parseInt(document.getElementById("cardCount").value);
+      let totalCards = 130;
+      let cards = [];
+      let output = "";
 
-            let cardNumber = formatCardNumber(card);
-            let cardImage = `https://github.com/HourLight/11/raw/main/LINE_ALBUM_2025.3.23_250323_${card}.jpg`;
+      for (let i = 0; i < count; i++) {
+        let card = Math.floor(Math.random() * totalCards) + 1;
+        let cardNumber = formatCardNumber(card);
+        let cardImage = `https://github.com/HourLight/11/raw/main/LINE_ALBUM_2025.3.23_250323_${card}.jpg`;
 
-            let cardArea = document.getElementById('cardArea');
-            cardArea.innerHTML = `
-                <img src="${cardImage}">
-                <div class="card-name">✨ 馥靈之鑰 能量卡 ✨<br>(卡牌編號：<span id="cardNumber">${cardNumber}</span>)</div>
-                <br>
-                <button onclick="copyCardNumber()">📋 點我複製牌卡編號</button>
-                <br>
-                <a href="https://chatgpt.com/g/g-67dbfd35223c8191a5b6fe5f91e1fe60-fu-ling-zhi-yao-hour-lightzhi-jian-neng-liang-diao-pin-xi-tong" 
-                   target="_blank" class="link-button">🔮 點我獲取指尖能量頻測報告 🔮</a>
-                <br>
-                <button onclick="location.reload()">重新抽牌</button>`;
-        }
+        cards.push(cardNumber);
 
-        function copyCardNumber() {
-            let cardNumber = document.getElementById('cardNumber').innerText;
-            navigator.clipboard.writeText(cardNumber).then(() => {
-                alert('牌卡編號「' + cardNumber + '」已複製！請在頻測網頁中貼上使用。');
-            }, () => {
-                alert('無法自動複製，請手動複製：' + cardNumber);
-            });
-        }
-    </script>
+        output += `
+          <img src="${cardImage}">
+          <div class="card-name">✨ 馥靈之鑰 能量卡 ✨<br>(卡牌編號：<span>${cardNumber}</span>)</div>
+          <br>`;
+      }
 
-    <!-- 新增返回首頁的按鈕 -->
-    <div style="text-align:center; margin-top:25px;">
-        <a class="link-button" href="https://hourlight.github.io/">🏠 返回首頁</a>
-    </div>
+      output += `
+        <button onclick="copyAllCardNumbers()">📋 點我複製所有牌卡編號</button>
+        <br>
+        <a href="https://chatgpt.com/g/g-67dbfd35223c8191a5b6fe5f91e1fe60-fu-ling-zhi-yao-hour-lightzhi-jian-neng-liang-diao-pin-xi-tong" 
+           target="_blank" class="link-button">🔮 點我獲取指尖能量頻測報告 🔮</a>
+        <br>
+        <button onclick="location.reload()">重新抽牌</button>`;
+
+      document.getElementById("cardArea").innerHTML = output;
+      window.cardCodes = cards;
+    }
+
+    function copyAllCardNumbers() {
+      let text = window.cardCodes.join(", ");
+      navigator.clipboard.writeText(text).then(() => {
+        alert("牌卡編號「" + text + "」已複製！請在頻測網頁中貼上使用。");
+      }, () => {
+        alert("無法自動複製，請手動複製：" + text);
+      });
+    }
+  </script>
+
+  <div style="text-align:center; margin-top:25px;">
+    <a class="link-button" href="https://hourlight.github.io/">🏠 返回首頁</a>
+  </div>
 </body>
 </html>
